Fix Forge loader startup on Android.
Merge inherited Forge version arguments correctly, avoid conflicting native preloads, and skip incompatible launcher hooks so modded versions can boot reliably.

Co-authored-by: Cursor <cursoragent@cursor.com>